fixed the backend

--- a/Chatbot-backend.ipynb
+++ b/Chatbot-backend.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNd6peM4FDQXwC6ynlMHvUq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +28,23 @@
     {
       "cell_type": "code",
       "source": [
+        "def read_file(file_name):\n",
+        "    try:\n",
+        "        with open(file_name, 'r') as file:\n",
+        "            content = file.read()\n",
+        "        return content\n",
+        "    except FileNotFoundError:\n",
+        "        return \"File not found.\"\n"
+      ],
+      "metadata": {
+        "id": "xSCCXOJH64Am"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def respond_to_query(query, data):\n",
         "    lines = data.split('\\n')\n",
         "    for line in lines:\n",
@@ -49,23 +65,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 512
+          "height": 425
         },
         "id": "GNUNX1GeZPjI",
-        "outputId": "08dac599-1f51-4066-eea3-f6f61c9bd3ed"
+        "outputId": "082121c3-0f93-42d2-e207-aa1131aa8f85"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "أنت: Name\n",
-            "البوت: Name: Reem\n",
-            "أنت: Age\n",
-            "البوت: Age:22 year\n",
-            "أنت: National\n",
-            "البوت: National:KSA\n"
+            "البوت: Name: Reem\n"
           ]
         },
         {
@@ -82,6 +94,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EzCVlQWh46AZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
