--- a/OCR.ipynb
+++ b/OCR.ipynb
@@ -6,11 +6,11 @@
         "!pip install opencv-python"
       ],
       "metadata": {
-        "id": "hOzFMTmGlmcs",
-        "outputId": "bfdd8155-87e8-4f93-c2ce-96f4e4c0f4fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hOzFMTmGlmcs",
+        "outputId": "bfdd8155-87e8-4f93-c2ce-96f4e4c0f4fb"
       },
       "execution_count": 9,
       "outputs": [
@@ -30,11 +30,11 @@
         "!pip install pytesseract io pdf2image opencv-python"
       ],
       "metadata": {
-        "id": "CBND79BAnIlg",
-        "outputId": "6a90c6e0-c5f8-42ba-c016-b0f2bf75cee5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CBND79BAnIlg",
+        "outputId": "6a90c6e0-c5f8-42ba-c016-b0f2bf75cee5"
       },
       "execution_count": 11,
       "outputs": [
@@ -87,11 +87,11 @@
         "!pip install PyMuPDF"
       ],
       "metadata": {
-        "id": "K_81ZCfOmBwZ",
-        "outputId": "ea353558-62a4-481f-ee28-82ba03fa615f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "K_81ZCfOmBwZ",
+        "outputId": "ea353558-62a4-481f-ee28-82ba03fa615f"
       },
       "execution_count": 13,
       "outputs": [
@@ -179,6 +179,20 @@
         "\n",
         "# Release the video capture object\n",
         "cap.release()\n",
+        "\n",
+        "# Compare frames and remove duplicates\n",
+        "for i in range(len(frames)):\n",
+        "    is_duplicate = False\n",
+        "    frame = frames[i]\n",
+        "\n",
+        "    # Compare the current frame with previous unique slides\n",
+        "    for unique_frame in unique_slides:\n",
+        "        if are_frames_similar(unique_frame, frame, similarity_threshold):\n",
+        "            is_duplicate = True\n",
+        "            break\n",
+        "\n",
+        "    if not is_duplicate:\n",
+        "        unique_slides.append(frame)\n",
         "\n",
         "# Compare frames in parallel\n",
         "with multiprocessing.Pool() as pool:\n",
