--- a/WhisperX.ipynb
+++ b/WhisperX.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/wingmoe21/tech_innovators/blob/main/WhisperX.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -165,9 +165,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "13-dfP10fml3"
+        "id": "13-dfP10fml3",
+        "outputId": "1ec3a5a6-fcf2-4318-99fe-9768f84abec0"
       },
       "outputs": [
         {
@@ -200,7 +201,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "622DWyR0hGNZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -268,8 +281,8 @@
         "from moviepy.editor import VideoFileClip\n",
         "\n",
         "device = \"cuda\"\n",
-        "audio_file = \"Recording #3.mp4\"\n",
-        "batch_size = 6  # reduce if low on GPU mem\n",
+        "audio_file = \"/content/drive/MyDrive/Lectures/Next Greater Element _ GeeksforGeeks.mp4\"\n",
+        "batch_size = 20  # reduce if low on GPU mem\n",
         "compute_type = \"float16\"  # change to \"int8\" if low on GPU mem (may reduce accuracy)\n",
         "\n",
         "def convert_mp4_to_mp3(input_file, output_file):\n",
@@ -304,9 +317,9 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "V100",
-      "include_colab_link": true,
       "machine_shape": "hm",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
