deleted uneccasaary imports

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,8 +13,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting git+https://github.com/m-bain/whisperx.git\n",
             "  Cloning https://github.com/m-bain/whisperx.git to /tmp/pip-req-build-4cp4q75c\n",
@@ -233,7 +233,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
@@ -243,7 +242,8 @@
               }
             }
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -262,8 +262,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting PyPDF2\n",
             "  Downloading pypdf2-3.0.1-py3-none-any.whl (232 kB)\n",
@@ -289,8 +289,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting ffmpeg\n",
             "  Downloading ffmpeg-1.4.tar.gz (5.1 kB)\n",
@@ -313,17 +313,17 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "iWOk5akTbTBf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "id": "iWOk5akTbTBf",
         "outputId": "69d00efe-5816-4c7c-855c-4c5a128c9999"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting frontend\n",
             "  Downloading frontend-0.0.3-py3-none-any.whl (32 kB)\n",
@@ -408,7 +408,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
@@ -418,7 +417,8 @@
               }
             }
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -429,16 +429,16 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "JGulnrbud4J-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "JGulnrbud4J-",
         "outputId": "ec8e152b-c3cb-4f85-e010-26d5f201aeb5"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting pymupdf\n",
             "  Downloading PyMuPDF-1.23.6-cp310-none-manylinux2014_x86_64.whl (4.3 MB)\n",
@@ -464,19 +464,17 @@
       "outputs": [],
       "source": [
         "import io\n",
-        "import multiprocessing\n",
-        "import os\n",
-        "import fitz\n",
+        "\n",
         "import cv2\n",
-        "import numpy as np\n",
+        "import fitz\n",
         "import whisperx\n",
         "from moviepy.editor import VideoFileClip\n",
         "from PIL import Image\n",
         "from skimage.metrics import structural_similarity as ssim\n",
         "\n",
         "device = \"cuda\"\n",
-        "video_path = \"/content/Functions_that_are_executed_before_and_after_main_in_C_GeeksforGeeks.mp4\"\n",
-        "batch_size = 12  # reduce if low on GPU mem\n",
+        "video_path = \"C:\\\\Users\\\\mald2\\\\OneDrive\\\\Desktop\\\\capstone\\\\tech_innovators\\\\VID\\\\How does free() know the size of memory to be deallocated.mp4\"\n",
+        "batch_size = 1  # reduce if low on GPU mem\n",
         "compute_type = \"float16\"  # change to \"int8\" if low on GPU mem (may reduce accuracy)\n",
         "# Tolerance to decide whether two images are similar\n",
         "similarity_threshold = 0.95\n",
@@ -576,10 +574,11 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
+      "gpuType": "V100",
       "machine_shape": "hm",
-      "provenance": [],
-      "gpuType": "V100"
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -587,8 +586,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
