--- a/main.ipynb
+++ b/main.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/wingmoe21/tech_innovators/blob/main/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -27,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -72,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -99,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -445,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -472,7 +482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -504,7 +514,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -620,7 +630,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -936,7 +946,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "YqckEJEVZPhB"
       },
@@ -948,7 +958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -971,7 +981,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "Fz_ljAoNZys7"
       },
@@ -983,7 +993,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1029,7 +1039,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1319,11 +1329,81 @@
         "    description = interpret_image(image)\n",
         "    print(description)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import base64\n",
+        "import requests\n",
+        "\n",
+        "# OpenAI API Key\n",
+        "api_key = \"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\"\n",
+        "\n",
+        "# Function to encode the image\n",
+        "def encode_image(image_path):\n",
+        "  with open(image_path, \"rb\") as image_file:\n",
+        "    return base64.b64encode(image_file.read()).decode('utf-8')\n",
+        "\n",
+        "# Path to your image\n",
+        "image_path = \"/content/image_page_0_img_0 (4).png\"\n",
+        "\n",
+        "# Getting the base64 string\n",
+        "base64_image = encode_image(image_path)\n",
+        "\n",
+        "headers = {\n",
+        "  \"Content-Type\": \"application/json\",\n",
+        "  \"Authorization\": f\"Bearer {api_key}\"\n",
+        "}\n",
+        "\n",
+        "payload = {\n",
+        "  \"model\": \"gpt-4-vision-preview\",\n",
+        "  \"messages\": [\n",
+        "    {\n",
+        "      \"role\": \"user\",\n",
+        "      \"content\": [\n",
+        "        {\n",
+        "          \"type\": \"text\",\n",
+        "          \"text\": \"What’s in this image?\"\n",
+        "        },\n",
+        "        {\n",
+        "          \"type\": \"image_url\",\n",
+        "          \"image_url\": {\n",
+        "            \"url\": f\"data:image/jpeg;base64,{base64_image}\"\n",
+        "          }\n",
+        "        }\n",
+        "      ]\n",
+        "    }\n",
+        "  ],\n",
+        "  \"max_tokens\": 300\n",
+        "}\n",
+        "\n",
+        "response = requests.post(\"https://api.openai.com/v1/chat/completions\", headers=headers, json=payload)\n",
+        "\n",
+        "print(response.json())"
+      ],
+      "metadata": {
+        "id": "-5D-H6hwZyzD",
+        "outputId": "881cf188-a515-49ec-e11c-87658b7e8269",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'id': 'chatcmpl-8MjHd9TiNkn56E3r2kUP4SuCuBfFh', 'object': 'chat.completion', 'created': 1700427977, 'model': 'gpt-4-1106-vision-preview', 'usage': {'prompt_tokens': 1118, 'completion_tokens': 241, 'total_tokens': 1359}, 'choices': [{'message': {'role': 'assistant', 'content': \"The image contains text that seems to refer to a programming concept, specifically in the C language. There's a piece of code that demonstrates a function call with arguments that may have side effects due to their sequence of evaluation. The code sample is as follows:\\n\\n```\\nvoid func (int, int);\\n\\nint i = 2;\\nfunc (i++, i++);\\n```\\n\\nBelow the code, there's a discussion about the different evaluation order outputs of this program:\\n\\n- From left to right\\n- From right to left\\n\\nThen, there's text describing that the order of evaluation of arguments in a function call is compiler dependent in C. This means that it isn't specified by the C standard, and different compilers may evaluate arguments in different orders, which can result in different behaviors when side effects are involved, as with the `i++` increment operation in the given example.\\n\\nThe last part of the text emphasizes that it is never safe to depend on the order of evaluation of such side effects, because a function call like the one shown above may behave differently from one compiler to another. This is an important concept in C programming as it pertains to undefined behavior and portability of code across different platforms.\"}, 'finish_details': {'type': 'stop', 'stop': '<|fim_suffix|>'}, 'index': 0}]}\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
